<resources>
    <string name="app_name" translatable="false">4Zampe</string>
    <string name="razzeBottomBar">Razze</string>
    <string name="giochiBottomBar">Quiz</string>
    <string name="donazioniBottomBar">Donazioni</string>
    <string name="backDescription">Torna indietro</string>
    <string name="topBar">topBar</string>
    <string name="stringaVuota" />
    <string name="stringaDomanda"> Di che razza sono ?</string>
    <string name="caneUno">Labrador</string>
    <string name="caneDue">Golden</string>
    <string name="caneTre">Pastore Tedesco</string>
    <string name="caneQuattro">Mastino</string>
    <string name="DonazioniText">Con il tuo contributo potrai aiutare i nostri amici a quattro zampe.
        Piccola o grande che sia, una donazione è preziosa per Enpa e per le migliaia di trovatelli che ogni anno trovano rifugio nelle loro strutture.

    </string>
    <string name="DonazioniTextMD">Con il tuo contributo potrai aiutare i gatti meno fortunati.
       La cura dei gatti, le tante attivita e la ricostruzione del rifugio sono possibili solo grazie al tuo contributo.

    </string>
    <string name="DonazioniTextOP">Con il tuo contributo potrai aiutare i nostri amici a quattro zampe.
        La Associazione Oipa si occupera della donazione.

    </string>
    <string name="DonazioniTextSD">Con il tuo contributo potrai aiutare i nostri amici abbandonati.
        Aiutaci a contrastare il randagismo
e a donare ad ogni cane una vita dignitosa
    </string>
    <string name="DonazioniMaggioriinfo">Per maggiori informazioni fai Tap sul bottone.
    </string>
    <string name="catCani">Metti alla prova le tue conoscenze con questo set di quiz a tema Cani.
    </string>
    <string name="catGatti">Metti alla prova le tue conoscenze con questo set di quiz a tema Gatti.
    </string>
    <string name="catCaniGatti">Metti alla prova le tue conoscenze con questo set di quiz completo.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="razzeFragment">razzeFragment</string>
    <string name="nomePetDetail">Nome pet</string>
    <string name="temperamentPetDetail">Troppo bravo, carino e coccoloso</string>
    <string name="temperamentoLabel">Temperamento:</string>
    <string name="lifespanPetDetail">Dai tanti a 16 anni</string>
    <string name="lifespanLabel">Aspettativa di vita:</string>
    <string name="originLabel">Origine:</string>
    <string name="originPetDetail">San pietrobrugo</string>
    <string name="weightLabel">Peso</string>
    <string name="weightPetDetail">132kg</string>
    <string name="heightLabel">Altezza</string>
    <string name="heightPetDetail">2213cm</string>
    <string name="wikiLabel">Wikipedia</string>
    <string name="wikiPetDetail">www.questolinkefake.com</string>
    <string name="breedLabel">Razza:</string>
    <string name="temperamentLabel">Temperamento:</string>
    <string name="breed_nameText">test</string>
    <string name="breed_nameTemperament">test</string>
    <string name="action_search">Search</string>
    <string name="cane">Cani</string>
    <string name="gatti">Gatti</string>
    <string name="cani">Cani</string>
    <string name="back">Back</string>
    <string name="score">Score:</string>
    <string name="_1_di_5">1 di 5</string>
    <string name="_10">10</string>
    <string name="mr_dog">mr dog</string>
    <string name="score">Score:</string>
    <string name="_1_di_5">1 di 5</string>
    <string name="_10">10</string>
    <string name="mr_dog">mr dog</string>
    <string name="score">Score:</string>
    <string name="_1_di_5">1 di 5</string>
    <string name="_10">10</string>
    <string name="mr_dog">mr dog</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="bio">Bio</string>
    <string name="salva">Salva</string>
    <string name="login">Login</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="registrazione">Registrazione</string>
    <string name="non_ora">Non ora</string>
    <string name="versione_1_0_0_demo">Versione 1.0.0 (demo)</string>
</resources>