<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">



    <RelativeLayout
        android:id="@+id/layoutPetDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:context=".DetailPetFragment">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardPetDetailUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:clipToPadding="true"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imagePetDetail"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/mrdog"
                    android:contentDescription="mr dog"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/nomePetDetail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/nomePetDetail"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/dividerPetDetail"
            android:background="@android:color/darker_gray"
            android:layout_below="@id/cardPetDetailUp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPetDetailDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dividerPetDetail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/black"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/temperamentoLabel"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/temperamentoPetDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperamentPetDetail"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/lifespanLabel"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lifespanPetDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lifespanPetDetail"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/originLabel"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/originPetDetail"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/weightLabel"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weightPetDetail"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/heightLabel"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heightPetDetail"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/wikiLabel"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wikiPetDetail"
                    android:textSize="20sp"
                    android:textStyle="italic" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>