<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:visibility="visible"
    tools:context=".CatActivity">

    <TextView
        android:id="@+id/txtQuest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/QuizCV"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/white"
        android:text="@string/stringaDomanda"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ImageCV"
        android:layout_width="339dp"
        android:layout_height="216dp"
        android:layout_above="@+id/txtQuest"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:clipToPadding="true"
        app:cardCornerRadius="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mrdog"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="mr dog"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/QuizCV"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/green_200"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/quiz_btn"
                android:text="@string/caneUno"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:elevation="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/quiz_btn"
                android:text="@string/caneDue"
                android:textColor="@color/black"
                android:textSize="18sp"

                android:elevation="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/quiz_btn"
                android:text="@string/caneTre"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:elevation="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/quiz_btn"
                android:text="@string/caneQuattro"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:elevation="8dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>