<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activity.EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/Edit_ProfileCV1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="1dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profileImageView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                app:cardCornerRadius="50dp"
                app:cardElevation="20dp"
                tools:srcCompat="@tools:sample/avatars" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Edit_ProfileCV1"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="3dp"
            android:hint="@string/nome"
            android:textColor="@color/green_500"
            android:textColorHint="@color/green_500" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileFullName"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/ic_baseline_local_post_office_24"
            android:drawablePadding="3dp"
            android:hint="@string/e_mail"
            android:textColor="@color/green_500"
            android:textColorHint="@color/green_500" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileEmailAddress"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:drawableLeft="@drawable/ic_baseline_text_snippet_24"
            android:drawablePadding="3dp"
            android:hint="@string/bio"
            android:textColor="@color/green_500"
            android:textColorHint="@color/green_500" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveProfileInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileBio"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="100dp"
            android:backgroundTint="@color/light_green"
            android:elevation="2dp"
            android:text="@string/salva"
            app:cornerRadius="20dp" />


    </RelativeLayout>

</ScrollView>