<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:visibility="visible"
    tools:context=".DogActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topbarD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/green_200"
        android:layout_centerHorizontal="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="42dp">

            <TextView
                android:id="@+id/txtScore"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="Score:"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="9dp" />

            <TextView
                android:id="@+id/txtNQuest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="1 di 5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txtTimer"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toEndOf="@+id/txtScore"
                tools:layout_editor_absoluteY="1dp" />

            <TextView
                android:id="@+id/txtTimer"
                android:layout_width="37dp"
                android:layout_height="41dp"
                android:layout_marginEnd="20dp"
                android:text="10"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/contentQuizDog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:layout_below="@id/topbarD"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/ImageCV"
            android:layout_width="339dp"
            android:layout_height="216dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:clipToPadding="true"
            app:cardCornerRadius="30dp"
            android:elevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/QTimg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="mr dog"
                    android:scaleType="centerCrop" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtQuest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ImageCV"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="29dp"
            android:background="@color/white"
            android:text="@string/stringaDomanda"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/QuizCV"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtQuest"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/green_200"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    android:text="@string/caneUno"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="30dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    android:text="@string/caneDue"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="30dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:elevation="2dp"
                    android:text="@string/caneTre"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="30dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="2dp"
                    android:text="@string/caneQuattro"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:backgroundTint="@color/white"
                    app:cornerRadius="30dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>